--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,7 +20,10 @@
     </mat-grid-list>
   </div>
 
-  <div fxFlex *ngIf="selectedDish">
+
+  <app-dishdetail></app-dishdetail>
+
+  <!-- <div fxFlex *ngIf="selectedDish">
     <mat-card>
       <mat-card-header>
         <mat-card-title>
@@ -37,7 +40,7 @@
         <button mat-button>SHARE</button>
       </mat-card-actions>
     </mat-card>
-  </div>
+  </div> -->
 
 </div>
 
