--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -20,7 +20,7 @@
           <h3 *ngIf="dish">{{dish.name | uppercase}}</h3>
         </mat-card-title>
       </mat-card-header>
-      <img mat-card-image src="{{dish.image}} "alt={{dish.name}}>
+      <img mat-card-image src="{{BaseURL + dish.image}} "alt={{dish.name}}>
       <mat-card-content>
         <p>{{dish.description}}
         </p>
@@ -47,6 +47,32 @@
           </p>
         </mat-list-item>
     </mat-list>
+
+    <form novalidate [formGroup]="commentForm"  #cform="ngForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field>
+          <input matInput formControlName="author" placeholder="Author" type="text" required>
+          <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-slider label="Rating" min="1" max="5" step="1" value="5" formControlName="rating"></mat-slider>
+        <!-- <mat-slider thumblabel="" formcontrolname="rating" step="1" tickinterval="1" min="0" max="5"></mat-slider> -->
+      </p>
+      <p>
+        <mat-form-field>
+          <input matInput formControlName="comment" placeholder="Comment" type="text" required>
+          <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+        </mat-form-field>
+      </p>
+      <p>
+        <!-- <button type="submit" mat-button class="mat-background-warn text-floral-white"
+                [disabled]="commentForm.invalid">
+          Submit
+        </button> -->
+        <button type="submit" [disabled]="commentForm.invalid" mat-button class="background-primary text-floral-white">Submit</button>
+      </p>
+    </form>
   </div>
 
   <div [hidden]="dish">
