--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -58,7 +58,7 @@
     <h2>Corporate Leadership</h2>
   <mat-list *ngIf = "leaders">
     <mat-list-item *ngFor="let leader of leaders">
-      <img matListAvatar src={{leader.image}} alt={{leader.name}}>
+      <img matListAvatar src="{{BaseURL + leader.image}}" alt={{leader.name}}>
       <h1 matLine> {{leader.name}} </h1>
       <p matLine>
         <span> {{leader.designation}} </span>
@@ -68,8 +68,12 @@
       </p>
     </mat-list-item>
   </mat-list>
-  <div [hidden]="leaders">
+  <div [hidden]="leaders || leaderErrMess">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div fxFlex *ngIf="leaderErrMess">
+    <h2>Error</h2>
+    <h4>{{dishErrMess}}</h4>
   </div>
   </div>
 </div>
